// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Size related props 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input" var-pagination-cover="">
      <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-127">
          <div class="var-input-decorator__controller var--box">
            <div class="var-input-decorator__icon"></div>
            <div class="var-input-decorator__wrap">
              <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-127" type="text">
              <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
            </div>
            <div class="var-input-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-input-decorator__line">
            <div class="var-input-decorator__dot"></div>
          </div>
        </label>
        <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div><span> / 6 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>20条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`Size related props 2`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input" var-pagination-cover="">
      <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-127">
          <div class="var-input-decorator__controller var--box">
            <div class="var-input-decorator__icon"></div>
            <div class="var-input-decorator__wrap">
              <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-127" type="text">
              <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
            </div>
            <div class="var-input-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-input-decorator__line">
            <div class="var-input-decorator__dot"></div>
          </div>
        </label>
        <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div><span> / 6 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode disabled prop 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size var-pagination__item--disabled">
    <div class="var-menu">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`basic mode mount 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2 var-pagination__item--active">1</li>
  <li item-mode="head" class="var-pagination__item var-elevation--2 var-pagination__item--hide">...</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">2</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">3</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">4</li>
  <li item-mode="tail" class="var-pagination__item var-elevation--2">...</li>
  <li item-mode="basic" class="var-pagination__item var-elevation--2">13</li>
  <li class="var-pagination__item var-pagination__next var-elevation--2"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <li class="var-pagination__quickly">前往 <div class="var-input" var-pagination-cover="">
      <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-96">
          <div class="var-input-decorator__controller var--box">
            <div class="var-input-decorator__icon"></div>
            <div class="var-input-decorator__wrap">
              <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-96" type="text">
              <div class="var--ellipsis var-input-decorator__placeholder"></div>
            </div>
            <div class="var-input-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-input-decorator__line">
            <div class="var-input-decorator__dot"></div>
          </div>
        </label>
        <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </li>
  <li class="var-pagination__total">1-10 of 123 items</li>
</ul>"
`;

exports[`simple mode disabled prop 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple var-pagination__item--disabled">
    <div class="var-input" var-pagination-cover="">
      <div class="var-input-decorator var-input-decorator--standard var--decorator var-input-decorator--disabled"><label class="var-input-decorator__label var--relative var--block" for="var-input-73">
          <div class="var-input-decorator__controller var--box var-input-decorator--disabled">
            <div class="var-input-decorator__icon"></div>
            <div class="var-input-decorator__wrap">
              <!--v-if--><input class="var-input__input var-input--disabled" autocomplete="new-password" id="var-input-73" disabled="" type="text">
              <div class="var--ellipsis var-input-decorator--disabled var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
            </div>
            <div class="var-input-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-input-decorator__line var-input-decorator--line-disabled">
            <div class="var-input-decorator__dot var-input-decorator--line-disabled"></div>
          </div>
        </label>
        <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div><span> / 0 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size var-pagination__item--disabled">
    <div class="var-menu">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <!--v-if-->
</ul>"
`;

exports[`simple mode mount 1`] = `
"<ul class="var-pagination">
  <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__simple">
    <div class="var-input" var-pagination-cover="">
      <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-58">
          <div class="var-input-decorator__controller var--box">
            <div class="var-input-decorator__icon"></div>
            <div class="var-input-decorator__wrap">
              <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-58" type="text">
              <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
            </div>
            <div class="var-input-decorator__icon">
              <!--v-if-->
            </div>
          </div>
          <div class="var-input-decorator__line">
            <div class="var-input-decorator__dot"></div>
          </div>
        </label>
        <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div><span> / 13 <div class="var-pagination__simple-line"></div></span>
  </li>
  <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
  <li class="var-pagination__size">
    <div class="var-menu">
      <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </li>
  <!--v-if-->
  <li class="var-pagination__total">1-10 of 123 items</li>
</ul>"
`;

exports[`test pagination example 1`] = `
"<div class="app-type">基本使用</div>
<div class="transformer">
  <ul class="var-pagination">
    <li class="var-pagination__item var-pagination__prev var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__simple">
      <div class="var-input" var-pagination-cover="">
        <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-5">
            <div class="var-input-decorator__controller var--box">
              <div class="var-input-decorator__icon"></div>
              <div class="var-input-decorator__wrap">
                <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-5" type="text">
                <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
              </div>
              <div class="var-input-decorator__icon">
                <!--v-if-->
              </div>
            </div>
            <div class="var-input-decorator__line">
              <div class="var-input-decorator__dot"></div>
            </div>
          </label>
          <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </div><span> / 12 <div class="var-pagination__simple-line"></div></span>
    </li>
    <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__size">
      <div class="var-menu">
        <div class="var-pagination__size--open"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>
<div class="app-type">隐藏 size 切换器</div>
<div class="transformer">
  <ul class="var-pagination">
    <li class="var-pagination__item var-pagination__prev var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__simple">
      <div class="var-input" var-pagination-cover="">
        <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-20">
            <div class="var-input-decorator__controller var--box">
              <div class="var-input-decorator__icon"></div>
              <div class="var-input-decorator__wrap">
                <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-20" type="text">
                <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
              </div>
              <div class="var-input-decorator__icon">
                <!--v-if-->
              </div>
            </div>
            <div class="var-input-decorator__line">
              <div class="var-input-decorator__dot"></div>
            </div>
          </label>
          <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </div><span> / 12 <div class="var-pagination__simple-line"></div></span>
    </li>
    <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>
<div class="app-type">显示总数</div>
<div class="transformer">
  <ul class="var-pagination">
    <li class="var-pagination__item var-pagination__prev var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__simple">
      <div class="var-input" var-pagination-cover="">
        <div class="var-input-decorator var-input-decorator--standard var--decorator"><label class="var-input-decorator__label var--relative var--block" for="var-input-28">
            <div class="var-input-decorator__controller var--box">
              <div class="var-input-decorator__icon"></div>
              <div class="var-input-decorator__wrap">
                <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-28" type="text">
                <div class="var--ellipsis var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
              </div>
              <div class="var-input-decorator__icon">
                <!--v-if-->
              </div>
            </div>
            <div class="var-input-decorator__line">
              <div class="var-input-decorator__dot"></div>
            </div>
          </label>
          <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </div><span> / 12 <div class="var-pagination__simple-line"></div></span>
    </li>
    <li class="var-pagination__item var-pagination__next var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__size">
      <div class="var-menu">
        <div class="var-pagination__size--open"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <li class="var-pagination__total">共 120 条</li>
  </ul>
</div>
<div class="app-type">禁用</div>
<div class="transformer">
  <ul class="var-pagination">
    <li class="var-pagination__item var-pagination__prev var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-left" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__simple var-pagination__item--disabled">
      <div class="var-input" var-pagination-cover="">
        <div class="var-input-decorator var-input-decorator--standard var--decorator var-input-decorator--disabled"><label class="var-input-decorator__label var--relative var--block" for="var-input-43">
            <div class="var-input-decorator__controller var--box var-input-decorator--disabled">
              <div class="var-input-decorator__icon"></div>
              <div class="var-input-decorator__wrap">
                <!--v-if--><input class="var-input__input var-input--disabled" autocomplete="new-password" id="var-input-43" disabled="" type="text">
                <div class="var--ellipsis var-input-decorator--disabled var-input-decorator__placeholder var-input-decorator--placeholder-hint"></div>
              </div>
              <div class="var-input-decorator__icon">
                <!--v-if-->
              </div>
            </div>
            <div class="var-input-decorator__line var-input-decorator--line-disabled">
              <div class="var-input-decorator__dot var-input-decorator--line-disabled"></div>
            </div>
          </label>
          <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </div><span> / 12 <div class="var-pagination__simple-line"></div></span>
    </li>
    <li class="var-pagination__item var-pagination__next var-pagination__item--disabled var-pagination__item--simple"><i class="var-icon var-icon--set var-icon-chevron-right" style="transition-duration: 0ms;"></i></li>
    <li class="var-pagination__size var-pagination__item--disabled">
      <div class="var-menu">
        <div class="var-pagination__size--open var-pagination__size--open--disabled"><span>10条 / 页</span><i class="var-icon var-icon--set var-icon-menu-down var-pagination__size--open-icon" style="transition-duration: 0ms;" var-pagination-cover=""></i></div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
    </li>
    <!--v-if-->
    <!--v-if-->
  </ul>
</div>"
`;
